Fix HeroBanner and IndexPage spacings

--- a/src/common/ui-components/HeroBanner/HeroBanner.module.scss
+++ b/src/common/ui-components/HeroBanner/HeroBanner.module.scss
@@ -6,7 +6,7 @@
   position: absolute;
 }
 
-$koros-margin: -5rem;
+$koros-margin: -1rem;
 
 .korosContainer {
   height: 0;
