--- a/src/domain/IndexPage/IndexPage.module.scss
+++ b/src/domain/IndexPage/IndexPage.module.scss
@@ -8,7 +8,7 @@
 
 .section {
   background-color: var(--hds-ui-color-white);
-  margin: unit(4) 0;
+  margin: unit(1) 0;
   padding: unit(1);
   position: relative;
 
